--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -47,6 +47,9 @@ jobs:
       - name: Install dependencies
         run: npm ci --ignore-scripts
         
+      - name: Build
+        run: npm run build:prod
+        
       - name: Setup Pages
         uses: actions/configure-pages@v3
         
